Fix cart text align

--- a/assets/css/compatibility/woocommerce.css
+++ b/assets/css/compatibility/woocommerce.css
@@ -1103,6 +1103,7 @@ $gl-devices-list: (
 }
 .item--wc_cart .cart-item-dropdown {
   position: absolute;
+  text-align: left;
   color: #444444;
   top: 100%;
   right: 0px;
