--- a/assets/sass/site/compatibility/wc/_wc-cart.scss
+++ b/assets/sass/site/compatibility/wc/_wc-cart.scss
@@ -190,6 +190,7 @@
     }
     .cart-item-dropdown {
         position: absolute;
+        text-align: left;
         color: #444444;
         top: 100%;
         right: 0px;
